# networkrail-airflow-dbt

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: networkrail_dbt_dag.py  networkrail_movements_to_gcs_and_then_bigquery_dag.py
dbt/: profiles.yml
dbt/networkrail/: dbt_project.yml
dbt/networkrail/models/curated/networkrail/: crt_networkrail_fact_movements.sql  hours_of_each_day_with_highest_number_of_late_trains.sql  operating_company_that_has_highest_number_of_late_trains.sql  operating_company_that_has_highest_number_on_time_trains.sql  train_with_highest_number_of_off_route_records.sql  trains_that_have_never_been_late_and_off_route.sql
dbt/networkrail/models/persisted/networkrail/: pst_networkrail_fact_movements.sql
dbt/networkrail/models/staging/networkrail/: models.yml  src.yml  stg_networkrail__movements.sql  stg_networkrail__operating_companies.sql
dbt/networkrail/seeds/: seeds.yml
