[tool.poetry]
name = "networkrail-airflow-dbt"
version = "0.1.0"
description = ""
authors = ["kids <phakawat.fongchai.code@gmail.com>"]
readme = "README.md"
packages = [{include = "07_end_to_end_project"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
